fixtures/benchmark/negatives/n02.ts
const documentationExample = "gpt-4-turbo";
